<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/actionSearchAssociate"
        android:title="Add"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorWhite"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/actionAddAssociate"
        android:title="Search"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        app:showAsAction="always"/>
</menu>