<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarAssociate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_associate"
        app:subtitleTextColor="@color/colorWhite"
        app:theme="@style/AppTheme.Toolbar"
        app:title="Associate"
        app:titleTextColor="@color/colorWhite" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAssociate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        android:layout_margin="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarAssociate" />

</androidx.constraintlayout.widget.ConstraintLayout>
